--- a/pages/index.html
+++ b/pages/index.html
@@ -1,34 +1,42 @@
-<%inherit file="base.html"/>
+<%inherit file="base-sidebar.html"/>
 
-<%block name="main">
+<%block name="hero">
+  <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="col-10 col-sm-8 col-lg-6">
+      <img src="images-generated/chicago-skyline-800px.jpeg" class="d-block mx-lg-auto img-fluid" alt="Chicago Skyline" loading="lazy">
+      <span class="text-muted">
+        Photo by <a href="https://unsplash.com/@peterlaster?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Pedro Lastra</a> on <a href="https://unsplash.com/s/photos/chicago?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </span>
+    </div>
+    <div class="col-lg-6">
+      <h1 class="display-5 fw-bold lh-1 mb-3">PACT 2022</h1>
+      <p class="lead">
+      The 31st International Conference on Parallel Architectures and
+      Compilation Techniques (PACT) will be held during ${conf_dates}.
+      PACT is a long-running and unique conference at the intersection of
+      classical parallel architectures and compilers that brings together
+      researchers from architecture, compilers, programming languages, and
+      applications to present and discuss their latest research results.
+      Applications as a driver for innovations in architecture and compilers
+      are an important theme of the conference.
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Submit</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Attend</button>
+      </div>
+    </div>
+  </div>
+</%block>
+
+
+
+<%block name="maincol" filter="markdown">
+
+  # Submit your stuff!
+
   <h1>Get started with Bootstrap</h1>
   <p class="fs-5 col-md-8">Quickly and easily get started with Bootstrap's compiled, production-ready files with this barebones example featuring some basic HTML and helpful links. Download all our examples to get started.</p>
 
   <div class="mb-5">
     <a href="/docs/5.1/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
-  </div>
-
-  <hr class="col-3 col-md-2 mb-5">
-
-  <div class="row g-5">
-    <div class="col-md-6">
-      <h2>Starter projects</h2>
-      <p>Ready to beyond the starter template? Check out these open source projects that you can quickly duplicate to a new GitHub repository.</p>
-      <ul class="icon-list">
-        <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Bootstrap npm starter</a></li>
-        <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
-      </ul>
-    </div>
-
-    <div class="col-md-6">
-      <h2>Guides</h2>
-      <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
-      <ul class="icon-list">
-        <li><a href="/docs/5.1/getting-started/introduction/">Bootstrap quick start guide</a></li>
-        <li><a href="/docs/5.1/getting-started/webpack/">Bootstrap Webpack guide</a></li>
-        <li><a href="/docs/5.1/getting-started/parcel/">Bootstrap Parcel guide</a></li>
-        <li><a href="/docs/5.1/getting-started/contribute/">Contributing to Bootstrap</a></li>
-      </ul>
-    </div>
   </div>
 </%block>
