Add Yuri on org page

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -10,6 +10,9 @@
     **Program Chair:**<br>
     [Jose Moreira](https://researcher.watson.ibm.com/researcher/view.php?person=us-jmoreira), IBM
 
+    **Local Arrangements Chair:**<br>
+    [Yuri Alexeev](https://www.anl.gov/profile/yuri-alexeev), Argonne National Lab
+
     **Finance Chair:**<br>
     TBD
 
