--- a/pages/organization.html
+++ b/pages/organization.html
@@ -22,7 +22,7 @@
     **Publicity Co-Chairs:**
 
     - Europe: [Alexandra Jimborean](https://webs.um.es/alexandra.jimborean/miwiki/doku.php), U. Murcia
-    - Asia: [Rio Yokota](https://www.rio.gsic.titech.ac.jp/en/member/yokota.html), Tokio Institute of Technology
+    - Asia: [Rio Yokota](https://www.rio.gsic.titech.ac.jp/en/member/yokota.html), Tokyo Institute of Technology
     - Americas: TBD
 
     **ACM Student Reserach Competition Chair:**<br>
