--- a/pages/submit.html
+++ b/pages/submit.html
@@ -16,108 +16,9 @@
     is over, the official publication date remains the first day of the
     conference.)
 
-    ## Detailed Submission Instructions
-
-    Please make sure that your paper satisfies all of the following
-    requirements before being submitted. Submissions not adhering to these
-    submission guidelines will be rejected by the submission system.
-
-    -   The paper must have an abstract under 300 words.
-    -   The paper must be original material that has not been previously
-        published in another conference or journal, nor is currently under
-        review by another conference or journal. You may submit material
-        presented previously at a workshop without copyrighted proceedings.
-    -   The submission is limited to eleven (11) pages in the IEEE 8.5" x
-        11" (US letter size paper) Two-Column Format using 10pt font, with
-        no more than 6 lines per inch. This page limit applies to all
-        content NOT INCLUDING references, and there is no page limit for
-        references. Your paper must print satisfactorily on both Letter
-        paper (8.5"x11") and A4 paper (8.27"x11.69"). The box containing the
-        text should be no larger than 7.15"x9.27" (18.2cm x 23.5cm).
-
-        [Submission Templates in LaTeX and Word](#)
-        (not yet available)
-
-    -   Anonymized supplementary material may be provided in a single PDF
-        file uploaded at paper submission time, containing material that
-        support the content of the paper, e.g., proofs, additional
-        experimental results, data sets, etc. Reviewers are not required to
-        read the supplementary material but may choose to do so. **The
-        supplementary materials can be added as appendix after the reference
-        along with the main paper. There is no page limit for the appendix,
-        however, please keep it mind that reviewers are not required to read
-        the appendix**
-    -   Papers are to be submitted for **double-blind review**. Blind
-        reviewing of papers will be done by the program committee, assisted
-        by outside referees. Author names as well as hints of identity are
-        to be removed from the submitted paper.
-    -   Use care in naming your files. Source file names, e.g.,
-        Joe.Smith.dvi, are often embedded in the final output as readily
-        accessible comments. In addition, do not omit references to provide
-        anonymity, as this leaves the reviewer unable to grasp the context.
-        Instead, if you are extending your own work, you need to reference
-        and discuss the past work in third person, as if you were extending
-        someone else's research.
-    -   We realize in doing double-blind review that for some papers it will
-        still be obvious who the authors are. In this case, the submission
-        will not be penalized as long as a concerted effort was made to
-        reference and describe the relationship to the prior work as if you
-        were extending someone else's research. For example, if your name is
-        Joe Smith:
-
-        > "In previous work [1,2], Smith presented a new branch
-        > predictor for .... In this paper, we extend their work by ..."
-        >
-        > Bibliography
-        >
-        > - [1] Joe Smith, "A Parallel Architecture for ...,"
-        >   Proceedings of PACT 2004.
-        > - \[2\] Joe Smith, "A Compilation Technique for ...,"
-        >   Proceedings of PACT 2005.
-
-    -   Your submission must be formatted for black-and-white printers and
-        not color printers. This is especially true for plots and graphs in
-        the paper.
-    -   Please make sure that the labels on your graphs are readable without
-        the aid of a magnifying glass.
-    -   Please number the pages.
-    -   The paper must be submitted in PDF. We cannot accept any other
-        format, and we must be able to print the document just as we receive
-        it. We suggest that you use only the four widely-used printer fonts:
-        Times, Helvetica, Courier and Symbol.
-
-    Submission site: (TBD)
-
-    ## Conflicts Of Interest
-
-    To ensure a fair and high-quality reviewing process we ask ALL authors
-    of a submitted paper to register their conflicts at the submission site.
-    If a paper is found to have an undeclared conflict that causes a problem
-    OR if a paper is found to declare false conflicts in order to abuse or
-    game the review system, the paper may be rejected. Please declare a
-    conflict of interest with the following people for any author of your
-    paper. Do not limit yourself to only the PC members. A conflict occurs
-    in the following cases:
-
-    -   Between adviser and advisee forever.
-    -   Between family members forever.
-    -   Between people who have collaborated in the last 5 years. This
-        collaboration can consist of a joint research or development
-        project, a joint paper, or when there is direct funding from the
-        potential reviewer (as opposed to company funding) to an author of
-        the paper. Co-participation in professional activities, such as
-        tutorials or studies, is not cause for conflict. When in doubt, the
-        author should check with the PC chair.
-    -   Between people from same institution or who were in the same
-        institution in the last 5 years.
-    -   Between people whose relationship prevents the reviewer from being
-        objective in his/her assessment. Service collaborations, such as
-        co-authoring a report for a professional organization, serving on a
-        program committee, or co-presenting tutorials, do not themselves
-        create a conflict of interest. Co-authoring a paper that is a
-        compendium of various projects with no true collaboration among the
-        projects does not constitute a conflict among the authors of the
-        different projects.
+    {% filter indent(4) -%}
+    {% include "submission-instructions.md" %}
+    {% endfilter %}
 
   {% endfilter %}
 {% endblock %}
