Add/convert a few TBAs

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -6,5 +6,9 @@
 
     Registration information will be made available soon.
 
+    ## Cancellation Policy
+
+    (to be announced)
+
   {% endfilter %}
 {% endblock %}
