--- a/pages/program.html
+++ b/pages/program.html
@@ -6,15 +6,15 @@
 
     ## Monday, October 10, 2022
 
-    (TBD)
+    (to be announced)
 
     ## Tuesday, October 11, 2022
 
-    (TBD)
+    (to be announced)
 
     ## Wednesday, October 12, 2022
 
-    (TBD)
+    (to be announced)
 
   {% endfilter %}
 {% endblock %}
