--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -4,11 +4,11 @@
   {% filter markdown %}
     # Workshops
 
-    (TBA)
+    (to be announced)
 
     # Tutorials
 
-    (TBA)
+    (to be announced)
 
   {% endfilter %}
 {% endblock %}
