--- a/pages/organization.html
+++ b/pages/organization.html
@@ -14,22 +14,22 @@
     [Yuri Alexeev](https://www.anl.gov/profile/yuri-alexeev), Argonne National Lab
 
     **Finance Chair:**<br>
-    TBD
+    TBA
 
     **Workshop/Tutorial Chair:**<br>
-    TBD
+    TBA
 
     **Publicity Co-Chairs:**
 
     - Europe: [Alexandra Jimborean](https://webs.um.es/alexandra.jimborean/miwiki/doku.php), U. Murcia
     - Asia: [Rio Yokota](https://www.rio.gsic.titech.ac.jp/en/member/yokota.html), Tokyo Institute of Technology
-    - Americas: TBD
+    - Americas: TBA
 
     **ACM Student Reserach Competition Chair:**<br>
-    TBD
+    TBA
 
     **Artifact Evaluation Committee Chiar:**<br>
-    TBD
+    TBA
 
     ## Steering Committee
 
@@ -49,10 +49,10 @@
 
     ## Technical Program Committee
 
-    (TBD)
+    (TBA)
 
     ## Artifact Evaluation Committee
 
-    (TBD)
+    (TBA)
   {% endfilter %}
 {% endblock %}
