--- a/pages/organization.html
+++ b/pages/organization.html
@@ -38,13 +38,13 @@
     - [Guang Gao](https://www.capsl.udel.edu/~ggao/), U. Delaware, USA
     - [Bilha Mendelson](https://www.linkedin.com/in/bilha-mendelson-36208a1/?originalSubdomain=il), Optitura, Israel
     - [Yale Patt](http://users.ece.utexas.edu/~patt/), U. Texas at Austin, USA
-    - [Lawrence Rauchwerger](https://cs.illinois.edu/about/people/all-faculty/rwerger), (Vice-Chair), U. Illinois, USA
+    - [Lawrence Rauchwerger](https://cs.illinois.edu/about/people/all-faculty/rwerger) (Chair), U. Illinois, USA
     - [Valentina Salapura](https://www.linkedin.com/in/valentina-salapura-81924a44), AMD, USA
     - [Vivek Sarkar](https://vsarkar.cc.gatech.edu/), Georgia Tech, USA
     - [Mateo Valero](https://www.bsc.es/mateo-valero), UPC/Barcelona Supercomputing Center, Spain
     - [Jean Luc Gaudiot](http://pascal.eng.uci.edu/people/gaudiot.html), UC Irvine, USA
     - [Michel Cosnard](http://www-sop.inria.fr/members/Michel.Cosnard/) INRIA, France
-    - [Kemal Ebcioglu](http://global-supercomputing.com/people/kemal.ebcioglu/) (Chair) Global Supercomputing Corp., USA
+    - [Kemal Ebcioglu](http://global-supercomputing.com/people/kemal.ebcioglu/) Global Supercomputing Corp., USA
     - [Gabby Silberman](https://es.linkedin.com/in/gabbysilberman), BIST (Barcelona Inst. of Sci. and Tech.), Spain
 
     ## Technical Program Committee
