Update steering committee

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -35,12 +35,14 @@
 
     - [Erik Altman](https://researcher.watson.ibm.com/researcher/view.php?person=us-ealtman), IBM
     - [Skevos Evripidou](https://cy.linkedin.com/in/skevos-evripidou-55a7b2), U. Cyprus, Cyprus
-    - [Guang Gao](https://www.capsl.udel.edu/~ggao/), U. Delaware, USA
+    - [Albert Cohen](https://research.google/people/106208/), Google, France
     - [Bilha Mendelson](https://www.linkedin.com/in/bilha-mendelson-36208a1/?originalSubdomain=il), Optitura, Israel
     - [Yale Patt](http://users.ece.utexas.edu/~patt/), U. Texas at Austin, USA
+    - [Jaejin Lee](https://sites.google.com/view/jaejinlee), Seoul National University, Korea
     - [Lawrence Rauchwerger](https://cs.illinois.edu/about/people/all-faculty/rwerger) (Chair), U. Illinois, USA
     - [Valentina Salapura](https://www.linkedin.com/in/valentina-salapura-81924a44), AMD, USA
     - [Vivek Sarkar](https://vsarkar.cc.gatech.edu/), Georgia Tech, USA
+    - [Hyesoon Kim](https://faculty.cc.gatech.edu/~hyesoon/), Georgia Tech, USA
     - [Mateo Valero](https://www.bsc.es/mateo-valero), UPC/Barcelona Supercomputing Center, Spain
     - [Jean Luc Gaudiot](http://pascal.eng.uci.edu/people/gaudiot.html), UC Irvine, USA
     - [Michel Cosnard](http://www-sop.inria.fr/members/Michel.Cosnard/) INRIA, France
