--- a/pages/organization.html
+++ b/pages/organization.html
@@ -17,7 +17,7 @@
     TBA
 
     **Workshop/Tutorial Chair:**<br>
-    TBA
+    [Manoj Kumar](https://www.linkedin.com/in/manoj-kumar-3a06902/), IBM
 
     **Publicity Co-Chairs:**
 
