Fix SRC typo on org page

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -25,7 +25,7 @@
     - Asia: [Rio Yokota](https://www.rio.gsic.titech.ac.jp/en/member/yokota.html), Tokyo Institute of Technology
     - Americas: TBA
 
-    **ACM Student Reserach Competition Chair:**<br>
+    **ACM Student Research Competition Chair:**<br>
     TBA
 
     **Artifact Evaluation Committee Chiar:**<br>
