Hari for publicity chair americas

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -23,7 +23,7 @@
 
     - Europe: [Alexandra Jimborean](https://webs.um.es/alexandra.jimborean/miwiki/doku.php), U. Murcia
     - Asia: [Rio Yokota](https://www.rio.gsic.titech.ac.jp/en/member/yokota.html), Tokyo Institute of Technology
-    - Americas: TBA
+    - Americas: [Hari Sundar](https://www.cs.utah.edu/~hari/), U. Utah
 
     **ACM Student Research Competition Chair:**<br>
     TBA
