Post call for tutorials/workshops

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,6 +29,12 @@
 
 {% block maincol %}
   {% filter markdown %}
+    # News
+
+    * **Mar 6, 2022:** The call for workshops and tutorials is now posted.
+      See the [workshops/tutorials page](workshops.html).
+    * **Jan 27, 2022:** PACT 2022 is on! The call for papers is below.
+
     {% filter indent(4) -%}
     {% include "cfp.md" %}
     {% endfilter %}
