Fix workshop formatting

--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -28,38 +28,25 @@
     ### Workshop
 
     -   Title, scope, format and the main topics of the workshop
-
     -   Invited or keynote speakers (if any)
-
     -   Panel discussion (if any)
-
     -   Organizers' bio and affiliation, and a tentative list of PC members
-
     -   Duration (half day / full day)
-
     -   Expected and maximum number of participants
-
     -   Information on past workshops on the same topic with statistics on
         the number of attendees/submissions
 
     ### Tutorial
 
     -   Title and abstract of the tutorial
-
     -   An outline of tutorial content and objectives
-
     -   Prerequisite knowledge
-
     -   Special requirements (if any)
-
-    -   Organizers\' bio and affiliation
-
+    -   Organizers' bio and affiliation
     -   Duration (half day / full day)
-
-    -   Expected & maximum number of participants
-
+    -   Expected and maximum number of participants
     -   Information on past workshops on the same topic with statistics on
-        > the number of attendees/submissions
+        the number of attendees/submissions
 
     ### Important Dates
 
