--- a/pages/organization.html
+++ b/pages/organization.html
@@ -51,7 +51,41 @@
 
     ## Technical Program Committee
 
-    (TBA)
+    - Wibe (Bert) de Jong, Lawrence Berkeley Laboratory
+    - Alex Eichenberger, IBM
+    - Benjamin Brock, University of California, Berkeley
+    - Timothy Mattson, Intel
+    - Paul Kelly, Imperial College
+    - Aydin Buluc, University of California, Berkeley
+    - Barbara Chapman, Stony Brook University
+    - Saday Sadayappan, University of Utah
+    - Guido Araujo, State University of Campinas
+    - João Carvalho, University of Alberta
+    - Gianfranco Bilardi, University of Padova
+    - Xavier Martorell, Technical University of Catalunya
+    - Ramon Bertran, IBM
+    - Saugata Ghose, UIUC
+    - Charith Mendis, UIUC
+    - Yongshan Ding, Yale University
+    - Swamit Tannu, University of Wisconsin
+    - Devesh Tiwari, Northeastern University
+    - Anne Elster, Norwegian University of Science and Technology
+    - Alex McCaskey, NVIDIA
+    - Thien Nguyen, Quantum Brilliance
+    - Meghan Cowan, Microsoft
+    - Ulya R. Karpuzcu, University of Minnesota
+    - Fernando Pereira, University of Minas Gerais
+    - Zehra Sura, Bloomberg
+    - Jose Cano Reyes, University of Glasgow
+    - Calin Cascaval, Google
+    - Dounia Khaldi, Intel
+    - Milind Girkar, Intel
+    - Prasant Chatarasi, IBM
+    - Nishil Talati, University of Michigan
+    - Wenwen Wang, University of Georgia
+    - Tze Meng Low, CMU
+    - Nelson Amaral, University of Alberta
+    - Gushu Li, UCSB
 
     ## Artifact Evaluation Committee
 
