--- a/pages/organization.html
+++ b/pages/organization.html
@@ -76,7 +76,7 @@
     - Ulya R. Karpuzcu, University of Minnesota
     - Fernando Pereira, University of Minas Gerais
     - Zehra Sura, Bloomberg
-    - Jose Cano Reyes, University of Glasgow
+    - Jose Cano, University of Glasgow
     - Calin Cascaval, Google
     - Dounia Khaldi, Intel
     - Milind Girkar, Intel
