Updated Program Committee

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -51,41 +51,61 @@
 
     ## Technical Program Committee
 
-    - Wibe (Bert) de Jong, Lawrence Berkeley Laboratory
     - Alex Eichenberger, IBM
-    - Benjamin Brock, University of California, Berkeley
-    - Timothy Mattson, Intel
-    - Paul Kelly, Imperial College
+    - Albert Cohen, Google
+    - Alex McCaskey, NVIDIA
+    - Ana Lucia Varbanescu, University of Amsterdam
+    - Anne Elster, Norwegian University of Science and Technology
+    - Antonino Tumeo, Pacific Northwest National Laboratory
     - Aydin Buluc, University of California, Berkeley
     - Barbara Chapman, Stony Brook University
-    - Saday Sadayappan, University of Utah
-    - Guido Araujo, State University of Campinas
-    - JoÃ£o Carvalho, University of Alberta
-    - Gianfranco Bilardi, University of Padova
-    - Xavier Martorell, Technical University of Catalunya
-    - Ramon Bertran, IBM
-    - Saugata Ghose, UIUC
-    - Charith Mendis, UIUC
-    - Yongshan Ding, Yale University
-    - Swamit Tannu, University of Wisconsin
-    - Devesh Tiwari, Northeastern University
-    - Anne Elster, Norwegian University of Science and Technology
-    - Alex McCaskey, NVIDIA
-    - Thien Nguyen, Quantum Brilliance
-    - Meghan Cowan, Microsoft
-    - Ulya R. Karpuzcu, University of Minnesota
-    - Fernando Pereira, University of Minas Gerais
-    - Zehra Sura, Bloomberg
-    - Jose Cano, University of Glasgow
+    - Basilio Fraguela, Universidade da Coruña
+    - Benjamin Brock, University of California, Berkeley
     - Calin Cascaval, Google
+    - Charith Mendis, University of Illinois at Urbana-Champaign
+    - Daniele Spampinato, Huawei Technologies Switzerland AG
+    - Devesh Tiwari, Northeastern University
+    - Dimitrios Nikolopoulos, Virginia Tech
     - Dounia Khaldi, Intel
+    - Fernando Pereira, University of Minas Gerais
+    - Gianfranco Bilardi, University of Padova
+    - Girish Mururu, Google
+    - Guido Araujo, State University of Campinas
+    - Gushu Li, University of California, Santa Barbara
+    - Jacques Pienaar, Google
+    - Jaejin Lee, Seoul National University
+    - James Tuck, North Carolina State University
+    - João Carvalho, University of Alberta
+    - Jose Cano Reyes, University of Glasgow
+    - Jose Martinez, Cornell University
+    - Kei Hiraki, Preferred Networks
+    - Keiji Kimura, Waseda University
+    - Meghan Cowan, Microsoft
+    - Michael Burke, Rice University
+    - Mikel Lujan, University of Manchester
     - Milind Girkar, Intel
-    - Prasant Chatarasi, IBM
-    - Nishil Talati, University of Michigan
-    - Wenwen Wang, University of Georgia
-    - Tze Meng Low, CMU
     - Nelson Amaral, University of Alberta
-    - Gushu Li, UCSB
+    - Nishil Talati, University of Michigan
+    - Paul Kelly, Imperial College
+    - Prakash Murali, Microsoft
+    - Prasant Chatarasi, IBM
+    - Ramon Bertran, IBM
+    - Roshan Dathathri, Katana Graph
+    - Saday Sadayappan, University of Utah
+    - Saugata Ghose, University of Illinois at Urbana-Champaign
+    - Sushant Kondguli, Meta
+    - Swamit Tannu, University of Wisconsin
+    - Thien Nguyen, Quantum Brilliance
+    - Thomas Gross, ETH Zürich
+    - Timothy Mattson, Intel
+    - Tze Meng Low, Carnegie Mellon University
+    - Ulya R. Karpuzcu, University of Minnesota
+    - Wenwen Wang, University of Georgia
+    - Wibe (Bert) de Jong, Lawrence Berkeley Laboratory
+    - Xavier Martorell, Technical University of Catalunya
+    - Yiannis Papadopoulos, AMD
+    - Yongshan Ding, Yale University
+    - Zehra Sura, Bloomberg
 
     ## Artifact Evaluation Committee
 
