--- a/pages/organization.html
+++ b/pages/organization.html
@@ -51,9 +51,10 @@
 
     ## Technical Program Committee
 
-    - Alex Eichenberger, IBM
     - Albert Cohen, Google
+    - Alex Eichenberger, IBM
     - Alex McCaskey, NVIDIA
+    - Ali Javadi, IBM
     - Ana Lucia Varbanescu, University of Amsterdam
     - Anne Elster, Norwegian University of Science and Technology
     - Antonino Tumeo, Pacific Northwest National Laboratory
@@ -70,14 +71,13 @@
     - Fernando Pereira, University of Minas Gerais
     - Gianfranco Bilardi, University of Padova
     - Girish Mururu, Google
-    - Guido Araujo, State University of Campinas
+    - Guido Araujo, University of Campinas
     - Gushu Li, University of California, Santa Barbara
     - Jacques Pienaar, Google
     - Jaejin Lee, Seoul National University
     - James Tuck, North Carolina State University
     - João Carvalho, University of Alberta
     - Jose Cano Reyes, University of Glasgow
-    - Jose Martinez, Cornell University
     - Kei Hiraki, Preferred Networks
     - Keiji Kimura, Waseda University
     - Meghan Cowan, Microsoft
