--- a/pages/organization.html
+++ b/pages/organization.html
@@ -77,7 +77,7 @@
     - Jaejin Lee, Seoul National University
     - James Tuck, North Carolina State University
     - João Carvalho, University of Alberta
-    - Jose Cano Reyes, University of Glasgow
+    - Jose Cano, University of Glasgow
     - Kei Hiraki, Preferred Networks
     - Keiji Kimura, Waseda University
     - Meghan Cowan, Microsoft
