Add links to submission site

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,8 +20,9 @@
       Applications as a driver for innovations in architecture and compilers
       are an important theme of the conference.
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <a href="submit.html" class="btn btn-primary btn-lg px-4 me-md-2">Submit</a>
-        <a href="attend.html" class="btn btn-outline-secondary btn-lg px-4">Attend</a>
+        <a href="submit.html" class="btn btn-primary btn-lg px-4 me-md-2">For Authors</a>
+        <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a>
+        <a href="attend.html" class="btn btn-outline-secondary btn-lg px-4">For Attendees</a>
       </div>
     </div>
   </div>
@@ -31,6 +32,9 @@
   {% filter markdown %}
     # News
 
+    * **April 13, 2022:** The submission site is now available.
+      Please create an account on [our HotCRP site](https://pact22.hotcrp.com/)
+      to begin the submission process.
     * **Mar 6, 2022:** The call for workshops and tutorials is now posted.
       See the [workshops/tutorials page](workshops.html).
     * **Jan 27, 2022:** PACT 2022 is on! The call for papers is below.
