--- a/pages/submit.html
+++ b/pages/submit.html
@@ -5,6 +5,12 @@
 
     # Submissions
 
+    ## Submission Site
+
+
+    <a href="https://pact22.hotcrp.com/" class="btn btn-primary btn-lg px-4 me-md-2">Submit a Paper</a>
+
+
     ## Publication Date
 
     The official publication date is the date the proceedings are made
