Added Paul's middle initials

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -86,7 +86,7 @@
     - Milind Girkar, Intel
     - Nelson Amaral, University of Alberta
     - Nishil Talati, University of Michigan
-    - Paul Kelly, Imperial College
+    - Paul H J Kelly, Imperial College
     - Prakash Murali, Microsoft
     - Prasant Chatarasi, IBM
     - Ramon Bertran, IBM
