Fixed Prasanth's name

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -88,7 +88,7 @@
     - Nishil Talati, University of Michigan
     - Paul H J Kelly, Imperial College
     - Prakash Murali, Microsoft
-    - Prasant Chatarasi, IBM
+    - Prasanth Chatarasi, IBM
     - Ramon Bertran, IBM
     - Roshan Dathathri, Katana Graph
     - Saday Sadayappan, University of Utah
