--- a/pages/organization.html
+++ b/pages/organization.html
@@ -78,6 +78,7 @@
     - James Tuck, North Carolina State University
     - João Carvalho, University of Alberta
     - Jose Cano, University of Glasgow
+    - Juan Manuel Cebrian Gonzalez, Universidad de Murcia
     - Kei Hiraki, Preferred Networks
     - Keiji Kimura, Waseda University
     - Meghan Cowan, Microsoft
