Main paper deadline is past

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
       are an important theme of the conference.
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <a href="submit.html" class="btn btn-primary btn-lg px-4 me-md-2">For Authors</a>
-        <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a>
+        {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
         <a href="attend.html" class="btn btn-outline-secondary btn-lg px-4">For Attendees</a>
       </div>
     </div>
