--- a/pages/submit.html
+++ b/pages/submit.html
@@ -7,9 +7,7 @@
 
     ## Submission Site
 
-
-    <a href="https://pact22.hotcrp.com/" class="btn btn-primary btn-lg px-4 me-md-2">Submit a Paper</a>
-
+    <a href="https://pact22.hotcrp.com/" class="btn btn-primary btn-lg px-4 me-md-2">Visit Submission Site</a>
 
     ## Publication Date
 
