Add workshop blurb to news

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,6 +32,8 @@
   {% filter markdown %}
     # News
 
+    * **May 12, 2022:** Got a workshop or tutorial that would fit well with
+      PACT22? Please email Manoj Kumar <manoj1@us.ibm.com> to start a discussion.
     * **April 13, 2022:** The submission site is now available.
       Please create an account on [our HotCRP site](https://pact22.hotcrp.com/)
       to begin the submission process.
