--- a/pages/organization.html
+++ b/pages/organization.html
@@ -101,6 +101,7 @@
     - Timothy Mattson, Intel
     - Tze Meng Low, Carnegie Mellon University
     - Ulya R. Karpuzcu, University of Minnesota
+    - Wei Han, AMD
     - Wenwen Wang, University of Georgia
     - Wibe (Bert) de Jong, Lawrence Berkeley Laboratory
     - Xavier Martorell, Technical University of Catalunya
