@SaugataGhose is SRC chair

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -26,7 +26,7 @@
     - Americas: [Hari Sundar](https://www.cs.utah.edu/~hari/), U. Utah
 
     **ACM Student Research Competition Chair:**<br>
-    TBA
+    [Saugata Ghose](https://ghose.cs.illinois.edu/), U. Illinois
 
     **Artifact Evaluation Committee Chiar:**<br>
     TBA
