Added Call for Posters

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,6 +42,10 @@
     * **Jan 27, 2022:** PACT 2022 is on! The call for papers is below.
 
     {% filter indent(4) -%}
+    {% include "posters.md" %}
+    {% endfilter %}
+
+    {% filter indent(4) -%}
     {% include "cfp.md" %}
     {% endfilter %}
 
