Fix artifact chair typo

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -28,7 +28,7 @@
     **ACM Student Research Competition Chair:**<br>
     [Saugata Ghose](https://ghose.cs.illinois.edu/), U. Illinois
 
-    **Artifact Evaluation Committee Chiar:**<br>
+    **Artifact Evaluation Committee Chair:**<br>
     TBA
 
     ## Steering Committee
