Add news on venue and call for posters

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,6 +32,11 @@
   {% filter markdown %}
     # News
 
+    * **August 4, 2022:** We are happy to share that the venue for PACT 2022 will be
+    the [Discovery Partners Institute](https://www.google.com/maps/place/Discovery+Partners+Institute/@41.8789193,-87.63723,17z/data=!3m2!4b1!5s0x880e2cbf30a78eff:0x92b256adcca279a9!4m5!3m4!1s0x880e2df0af4a5f21:0xd66f11fe7d07385d!8m2!3d41.8789193!4d-87.63723)
+    in Chicago, with some sessions in the [Illini Center](https://illinicenter.illinois.edu/),
+    both at 200 S. Wacker Drive, Chicago.
+    * **August 4, 2022:** A call for posters is now open. See below for details.
     * **May 12, 2022:** Got a workshop or tutorial that would fit well with
       PACT22? Please email Manoj Kumar <manoj1@us.ibm.com> to start a discussion.
     * **April 13, 2022:** The submission site is now available.
