--- a/pages/index.html
+++ b/pages/index.html
@@ -32,6 +32,8 @@
   {% filter markdown %}
     # News
 
+    * **August 5, 2022:** [LCPC 2022](https://publish.illinois.edu/lcpc2022atillinois/)
+      will take place immediately after PACT 2022 in the same venue.
     * **August 4, 2022:** We are happy to share that the venue for PACT 2022 will be
     the [Discovery Partners Institute](https://www.google.com/maps/place/Discovery+Partners+Institute/@41.8789193,-87.63723,17z/data=!3m2!4b1!5s0x880e2cbf30a78eff:0x92b256adcca279a9!4m5!3m4!1s0x880e2df0af4a5f21:0xd66f11fe7d07385d!8m2!3d41.8789193!4d-87.63723)
     in Chicago, with some sessions in the [Illini Center](https://illinicenter.illinois.edu/),
