First version of SRC pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -40,6 +40,8 @@
   {% filter markdown %}
     # News
 
+    * **August 14, 2022:** The [ACM Student Research Competition (SRC)](./src.html) returns to PACT 2022, and invites students to submit their work (abstracts due September 1).
+      will take place immediately after PACT 2022 in the same venue.
     * **August 5, 2022:** [LCPC 2022](https://publish.illinois.edu/lcpc2022atillinois/)
       will take place immediately after PACT 2022 in the same venue.
     * **August 4, 2022:** We are happy to share that the venue for PACT 2022 will be
