Added Monday keynote

--- a/pages/program.html
+++ b/pages/program.html
@@ -6,7 +6,29 @@
 
     ## Monday, October 10, 2022
 
-    (to be announced)
+    ### Keynote: Dr. Fred Chong
+
+    Bio: Fred Chong is the Seymour Goodman Professor in the Department of
+    Computer Science at the University of Chicago and the Chief Scientist
+    for Quantum Software at ColdQuanta. He is also Lead Principal
+    Investigator for the EPiQC Project (Enabling Practical-scale Quantum
+    Computing), an NSF Expedition in Computing. Chong is a member of the
+    National Quantum Advisory Committee (NQIAC) which provides advice
+    to the President and Secretary of Energy on the National Quantum
+    Initiative Program. In 2020, he co-founded Super.tech, a quantum
+    software company, which was acquired by ColdQuanta in 2022. Chong
+    received his Ph.D. from MIT in 1996 and was a faculty member and
+    Chancellor's fellow at UC Davis from 1997-2005. He was also a
+    Professor of Computer Science, Director of Computer Engineering,
+    and Director of the Greenscale Center for Energy-Efficient Computing
+    at UCSB from 2005-2015. He is a recipient of the NSF CAREER award,
+    the Intel Outstanding Researcher Award, and 13 best paper awards.
+
+    Keynote Talk: Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design
+
+    Quantum computing is at an inflection point, where 127-qubit machines are deployed, and 1000-qubit machines are perhaps only a few years away.  These machines have the potential to fundamentally change our concept of what is computable and demonstrate practical applications in areas such as quantum chemistry, optimization, and quantum simulation.  Yet a significant resource gap remains between practical quantum algorithms and real machines.  A promising approach to closing this gap is to design software that is aware of the key physical properties of emerging quantum technologies.  I will illustrate this approach with some of our recent work that focuses on techniques that break traditional abstractions and inform hardware design, including compiling programs directly to analog control pulses,  computing with ternary quantum bits, 2.5D architectures for surface codes, and exploiting long-distance communication and tolerating atom loss in neutral-atom machines.
+
+    (Other talks to be announced)
 
     ## Tuesday, October 11, 2022
 
