Added Tuesday and Wednesday keynotes

--- a/pages/program.html
+++ b/pages/program.html
@@ -8,7 +8,7 @@
 
     ### Keynote: Dr. Fred Chong
 
-    Bio: Fred Chong is the Seymour Goodman Professor in the Department of
+    Fred Chong is the Seymour Goodman Professor in the Department of
     Computer Science at the University of Chicago and the Chief Scientist
     for Quantum Software at ColdQuanta. He is also Lead Principal
     Investigator for the EPiQC Project (Enabling Practical-scale Quantum
@@ -26,17 +26,72 @@
 
     Keynote Talk: Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design
 
-    Quantum computing is at an inflection point, where 127-qubit machines are deployed, and 1000-qubit machines are perhaps only a few years away.  These machines have the potential to fundamentally change our concept of what is computable and demonstrate practical applications in areas such as quantum chemistry, optimization, and quantum simulation.  Yet a significant resource gap remains between practical quantum algorithms and real machines.  A promising approach to closing this gap is to design software that is aware of the key physical properties of emerging quantum technologies.  I will illustrate this approach with some of our recent work that focuses on techniques that break traditional abstractions and inform hardware design, including compiling programs directly to analog control pulses,  computing with ternary quantum bits, 2.5D architectures for surface codes, and exploiting long-distance communication and tolerating atom loss in neutral-atom machines.
+    Quantum computing is at an inflection point, where 127-qubit
+    machines are deployed, and 1000-qubit machines are perhaps only a
+    few years away.  These machines have the potential to fundamentally
+    change our concept of what is computable and demonstrate practical
+    applications in areas such as quantum chemistry, optimization,
+    and quantum simulation.  Yet a significant resource gap remains
+    between practical quantum algorithms and real machines.  A promising
+    approach to closing this gap is to design software that is aware
+    of the key physical properties of emerging quantum technologies.
+    I will illustrate this approach with some of our recent work that
+    focuses on techniques that break traditional abstractions and
+    inform hardware design, including compiling programs directly
+    to analog control pulses,  computing with ternary quantum bits,
+    2.5D architectures for surface codes, and exploiting long-distance
+    communication and tolerating atom loss in neutral-atom machines.
 
     (Other talks to be announced)
 
     ## Tuesday, October 11, 2022
 
-    (to be announced)
+    ### Keynote: Dr. Massimiliano Di Ventra
+
+    Massimiliano Di Ventra obtained his undergraduate degree in Physics
+    summa cum laude from the University of Trieste (Italy) in 1991 and
+    did his PhD studies at the Swiss Federal Institute of Technology
+    in Lausanne in 1993-1997. He is now professor of Physics at the
+    University of California, San Diego. Di Ventra's research interests
+    are in condensed-matter theory and unconventional computing. He
+    has been invited to deliver more than 300 talks worldwide on these
+    topics. He has published more than 200 papers in refereed journals,
+    4 textbooks, and has 7 granted patents (3 foreign). He is a fellow
+    of the IEEE, the American Physical Society, the Institute of Physics,
+    and a foreign member of Academia Europaea. In 2018 he was named Highly
+    Cited Researcher by Clarivate Analytics, he is the recipient of the
+    2020 Feynman Prize for theory in Nanotechnology, and is a 2022 IEEE
+    Nanotechnology Council Distinguished Lecturer. He is the co-founder
+    of MemComputing, Inc. (http://memcpu.com/).
+
+    Keynote Talk - MemComputing: Fundamentals and Applications
+
+    MemComputing is a new physics-based approach to computation that
+    employs time non-locality (memory) to both process and store
+    information on the same physical location [1]. Its digital version
+    is designed to solve combinatorial optimization problems. A
+    practical realization of digital memcomputing machines (DMMs)
+    can be accomplished via circuits of non-linear dynamical systems
+    with memory engineered so that periodic orbits and chaos can be
+    avoided. A given logic (or algebraic) problem is first mapped into
+    this type of dynamical system whose point attractors represent the
+    solutions of the original problem. A DMM then finds the solution
+    via a succession of elementary avalanches (instantons) whose role
+    is to eliminate configurations of logical inconsistency ("logical
+    defects") from the circuit. I will discuss the physics behind
+    MemComputing and show many examples of its applicability to various
+    combinatorial optimization problems, Machine Learning, and Quantum
+    Mechanics, demonstrating its advantages over traditional approaches
+    and even quantum computing. Work supported by DARPA, DOE, NSF, CMRR,
+    and MemComputing, Inc. (http://memcpu.com/).
+
+    (Other talks to be announced)
 
     ## Wednesday, October 12, 2022
 
-    (to be announced)
+    ### Keynote: Dr. Vijayalakshmi Srinivasan, IBM Research, Yorktowhn Heights, NY, 10598-0218, USA
+
+    (Other talks to be announced)
 
   {% endfilter %}
 {% endblock %}
